sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:12: error: ')' expected but 'if' found.
	if(faitechange==false){
        ^